<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView android:text="@string/hello_world"
        android:layout_width="match_parent"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/button_background"
        android:layout_height="wrap_content"
        android:id="@+id/txtTitle" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_marginTop="50dp"
        android:layout_height="wrap_content">
    <EditText
        android:id="@+id/txtUserName"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
         android:padding="10dp"
        android:singleLine="true"
        android:maxLength="100"
        android:hint="@string/username"  />
        <TextView android:text="@string/tagremDomain"
            android:layout_width="match_parent"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:textSize="15dp"
            android:textStyle="bold"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:singleLine="true"
        android:inputType="textPassword"
        android:maxLength="50"
        android:hint="@string/password"  />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/ButtonStyle"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/btn_submit"
        />

    <TextView
        android:id="@+id/txtVersion"
        android:layout_width="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/button_background"
        />

</LinearLayout>
