<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="350dp"
    android:background="@color/secret_color_white"
    android:padding="10dp"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_title"
        android:textColor="@color/secret_color_black"
        android:textSize="20dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="10dp"
        android:id="@+id/dialogTitle" />


        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="@color/devider_color" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_message"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/secret_color_black"
        android:textSize="20dp"
        android:layout_marginTop="20dp"
        />

    </LinearLayout>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:id="@+id/myRadioGroup"
        android:checkedButton="@+id/fullMeal" >

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/secret_color_black"
            android:id="@+id/fullMeal"
            android:text="@string/full_meal" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/secret_color_black"
            android:id="@+id/miniMeal"
            android:text="@string/mini_meal" />

        <!--<RadioButton-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:id="@+id/MealForFast"-->
            <!--android:text="@string/meal_for_fast" />-->

    </RadioGroup>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center_horizontal"
        >
        <Button
            android:id="@+id/btnYes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ButtonStyle"
            android:text="@string/button_yes"
            android:textColor="@color/secret_color_black"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            />
        <Button
            android:id="@+id/btnNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_no"
            style="@style/ButtonStyle"
            android:textColor="@color/secret_color_black"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:layout_marginLeft="20dp"
            />
        </LinearLayout>

</LinearLayout>